--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,33 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog Ninja | <%= title %></title>
+  </head>
+  <body>
     <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Ninja</h1></a>
-            <p>A Net Ninja Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
+      <div class="site-title">
+        <a href="/"><h1>Blog Ninja</h1></a>
+        <p>A Net Ninja Site</p>
+      </div>
+      <ul>
+        <li><a href="/">Blogs</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/blogs/create">New Blog</a></li>
+      </ul>
     </nav>
     <div class="blogs content">
-        <h2>All Blogs</h2>
+      <h2>All Blogs</h2>
+
+        <% if(blogs.length > 0){ %>
+           <%blogs.forEach(blog => {%>
+            <h3 class="title"><%=blog.title%></h3>
+            <p class="snippet"><%= blog.snippet%> </p>
+       <% })%>
+        <%} %>
+
+
     </div>
-</body>
+  </body>
 </html>
